Se añade instalacion de wiringPi

--- a/install
+++ b/install
@@ -1,5 +1,7 @@
 #!/bin/bash
 
+./scripts/wiringPi.sh
+
 ./scripts/simplify.sh src include pampas simplified
 
 ./scripts/install simplified/pampas.cpp simplified/pampas.h pampas
