--- a/install
+++ b/install
@@ -4,4 +4,4 @@
 
 ./scripts/simplify.sh src include pampas simplified
 
-./scripts/install simplified/pampas.cpp simplified/pampas.h pampas
+./scripts/install.sh simplified/pampas.cpp simplified/pampas.h pampas
